--- a/Gas.html
+++ b/Gas.html
@@ -288,11 +288,13 @@
                           <h6 class="text-center ">
                             <i style="color: #12859c;" class="ri-alert-line"></i>
                             <strong style="color: #12859c;">Disclaimer&nbsp;:&nbsp;</strong>
-                            Funds that are used to initially Feed your APES (including when you want to Roll your position) cannot be withdrawn.
-                                  Your Apes will thank you for feeding them by giving you tokens to feed them more. However, although they are bothering other patrons and picking their pockets 
-                                  your new found friends will get tired. When you use the Roll Button this allows your apes to be excited and convince other to join them . This new larger group will cause even more mischief
-                                  , picking even more pockets. Just remember to not let your Apes to convince you to Roll earnings all the time, take profits responsibly.     
-                                  Please use the application at your own risk.
+                            Funds that are used to initially Feed your Llamas (including when you want to Roll your position) cannot be withdrawn.
+                                  Your Llamas will thank you for feeding them by giving you tokens to feed them more. 
+                                  However, although they are bothering other patrons and goofing off your new found friends will get tired.
+                                   When you use the Roll Button this allows your Llamas to be excited and convince other to join them . 
+                                  This new larger group will cause even more mischief. 
+                                  Just remember to not let your Llamas to convince you to Roll earnings all the time, take profits responsibly.     
+                                  Please be responsible while using the application .
                           </h6>
                           
                         </div>
