--- a/Mint.html
+++ b/Mint.html
@@ -158,8 +158,7 @@
                   100,000 tokens minted.
                   75% of the BNB collected will be used to buy and burn tokens from the Main LP,
                   the rest will be used for furhter advancement and promoting of the PrimeApe ecosystem.
-                  Users also have a chance to earn referral rewards by sharing their mint link and having other join the
-                  project.
+                  Users also have a chance to earn referral rewards by sharing their mint link and having others join.
 
                   <hr />
                 </h6>
