--- a/Presale.html
+++ b/Presale.html
@@ -150,9 +150,14 @@
                       <i style="color: #12859c;" class="ri-alert-line"></i>
                       <strong style="color: #12599c;">
                         Disclaimer&nbsp;:&nbsp;
-                      </strong>Welcome to our presale. We are having this for those who want to be early and support the ecosystem. A token price has been predeclared and we have aloted 25% of the circulating supply for this. 
-                               Users are able to purchase tokens during the presale and then claim after it is over . Once presale is over then we will launch the token officially. Users will be able to claim at any time after the presale timer is over . 
-                               A message will appear in place of the timer stating for users to claim their tokens. The funds collected will be used to provide the LP for the token. We appreciate everyone who participates and supports.
+                      </strong>Welcome to our presale. We are having this for those who want to be early and support the ecosystem.
+                       A token price has been predeclared and we have aloted 25,000 tokens for this. 
+                               Users are able to purchase tokens during the presale and then claim after it is over .
+                                Once presale is over then we will launch the token officially.
+                                 Users will be able to claim at any time after the presale timer is over . 
+                               A message will appear in place of the timer stating for users to claim their tokens.
+                                The funds collected will be used to provide the LP for the token.
+                                 We appreciate everyone who participates and supports.
                       <hr />
                     </h6>
                   </div>
