--- a/ROI.html
+++ b/ROI.html
@@ -213,8 +213,8 @@
                 <strong style="color: #12859c;">
                   Disclaimer&nbsp;:&nbsp;
                 </strong> Tokens that are deposited cannot be claimed out immediately. Once deposited they will be locked in the contract.
-                You are able to roll your interest back via the 2% accumulated daily. You are allowed to claim 4 times your initial deposit in total. 
-                Rolling  will help to increase your earnings and reach your max claimable faster.
+                You are able to roll your interest back via the 2% accumulated daily interest. You are allowed to claim 4 times your initial deposit in total. 
+                Rolling will help to increase your earnings and reach your max claimable faster.
                 Users are only able to claim 50% of there accumulated interest in a single withdraw.
                  Interest amounts of 25 tokens or less are not affected by the restriction.
                  When a user claims this balance it is deducted from their Total Deposits which affects daily interest accumulated.
