--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
               <p>
                 The Gargantua Token is our tribute to the famous ape from the circus world of old.
                  An ape at the time with images that compared him to King Kong. Although not that size but with his larger than life pictation, we knew we had to pay tribute to this wonderful Ape.
-                 Joins us in this celebration and crypto journey as we built a dapp to celebrate not only Gargantua but all the apes in the circus that have filled generations of kids with joy. 
+                 Join us in this celebration and crypto journey as we built a dapp to celebrate not only Gargantua but all the apes in the circus that have filled generations of kids with joy. 
                  Just like how Gargantua was larger than life we are making sure that the tokenomics can compare to his status. 
                <!-- Example image inside a paragraph -->
                <img src="assets/img/tokenwp.png" alt="Invest" style="max-width: 100%; height: auto; margin-top: 10px;">
@@ -317,9 +317,9 @@
             </a>
             <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
               <p>
-                A new approach has been taken to the Farming that is normally done.
+                A new approach has been taken to the Farming that is not normally done.
                 Users will have the ability to stake assets at a set APR.
-                The reason for the set Apr will be to make sure that a more stable Apr that users can count on for staking assets in the Dapp.
+                The reason for a Fixed Apr will be to make sure that users can count on stabe returns while staking assets in the Dapp.
                 This will reduce the need for Apr chasing and allow peace of mind for the users. 
                 <!-- Example image inside a paragraph -->
                 <img src="assets/img/fixedwp.png" alt="Success" style="max-width: 100%; height: auto; margin-top: 10px;">
@@ -373,7 +373,7 @@
             </a>
             <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Well, this is what every Ape loves a good ROI Dapp. This is a new take on the fountain contract that used on Pulsechain.
+                Well, this is what every Ape loves a good ROI Dapp. This is a new take on the fountain contract that is being used on Pulsechain.
                 Created for sustainability, and the best way to gain more of the tokens needed for passive income. 
                 <!-- Example image inside a paragraph -->
                 <img src="assets/img/mainwp.png" alt="Success" style="max-width: 100%; height: auto; margin-top: 10px;">
