--- a/Raffle.html
+++ b/Raffle.html
@@ -96,7 +96,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="https://bafybeicb2hlad6zs4kc4yvn5xbbzti6krjtpoxrysg42d4e5s5oubbipum.ipfs.dweb.link/#/address/0x0000000000000000000000000000000000000000">
+          <a class="nav-link text-light" href="https://bscscan.com/">
             <strong class="texting" style="color: #ffde59; font-size: 25px;">Raffle Contract</strong>
           </a>
         </li>
