--- a/Gas.html
+++ b/Gas.html
@@ -99,7 +99,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" href="https://bscscan.com/">
-            <strong class="texting" style="color: #ffde59; font-size: 25px;">Miner Contract</strong>
+            <strong class="texting" style="color: #ffde59; font-size: 25px;">Petting Zoo Contract</strong>
           </a>
         </li>
         <li class="nav-item">
