--- a/Mint.html
+++ b/Mint.html
@@ -100,7 +100,7 @@
           <li class="nav-item">
             <a class="nav-link text-light"
               href="https://bscscan.com/">
-              <strong class="texting" style="color: #ffde59; font-size: 25px;">Token Contract</strong>
+              <strong class="texting" style="color: #ffde59; font-size: 25px;">Mint Contract</strong>
             </a>
           </li>
           <li class="nav-item">
