--- a/Raffle.html
+++ b/Raffle.html
@@ -97,7 +97,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" href="https://bscscan.com/">
-            <strong class="texting" style="color: #ffde59; font-size: 25px;">Raffle Contract</strong>
+            <strong class="texting" style="color: #ffde59; font-size: 25px;">Lucky Tickets Contract</strong>
           </a>
         </li>
         <li class="nav-item">
