--- a/ROI.html
+++ b/ROI.html
@@ -117,7 +117,7 @@
           <div class="dropdown">
             <button class="dropbtn texting" style="color: #ffde59; font-size: 25px;">Dapps</button>
             <div class="dropdown-content">
-                <a href="FixedAPR.html">Kiddie Rides</a>
+                <a href="FixedAPY.html">Kiddie Rides</a>
                 <a href="ROI.html">Main Attraction</a>
                 <a href="Gas.html">Petting Zoo</a> 
                
@@ -212,17 +212,19 @@
                 <i style="color: #12859c;" class="ri-alert-line"></i>
                 <strong style="color: #12859c;">
                   Disclaimer&nbsp;:&nbsp;
-                </strong> Tokens that are deposited cannot be claimed out immediately. Once deposited they will be locked in the contract.
-                You are able to roll your interest back via the 2% accumulated daily interest. You are allowed to claim 4 times your initial deposit in total. 
-                Rolling will help to increase your earnings and reach your max claimable faster.
-                Users are only able to claim 50% of there accumulated interest in a single withdraw.
-                 Interest amounts of 25 tokens or less are not affected by the restriction.
-                 When a user claims this balance it is deducted from their Total Deposits which affects daily interest accumulated.
-                 Claiming too often will eventually kill your ability to earn interest.
-                 Users will pay a 10% deposit tax , a compound tax of 5% , and a tiered withdrawal tax starting at 15%. 
-                 When a user claims above 40,000 tokens then an additional 10% tax is added every 20,000 tokens claimed
-                  until 40%.  0 to 40k no extra tax , 40,001 to 60,000 add 10% , 60,001 to 80,000 add 20%, 80,001 to 100k add 30% , 100,001 to 120k add 40% .
-                   Interest is first taxed 15% then the balance is taxed the additional tax per tier.  
+                </strong> Tokens that are deposited cannot be claimed out immediately. 
+                Once deposited, they will be locked in the contract. 
+                You are able to roll your interest back via the 2% accumulated daily interest. 
+                You are allowed to claim four times your initial deposit in total. 
+                Rolling will help to increase your earnings and reach your maximum claimable faster. 
+                Users are only able to claim 50% of their accumulated interest in a single withdrawal. 
+                Interest amounts of 25 tokens or less are not affected by the restriction. 
+                When a user claims this balance, it is deducted from their total deposits, which affects the daily interest accumulated. 
+                Claiming too often will eventually kill your ability to earn interest. 
+                Users will pay a 10% deposit tax, a compound tax of 5%, and a tiered withdrawal tax starting at 15%. 
+                When a user claims above 40,000 tokens, then an additional 10% tax is added every 20,000 tokens claimed until 40%. 
+                0 to 40k no extra tax, 40,001 to 60,000 add 10%, 60,001 to 80,000 add 20%, 80,001 to 100k add 30%, and 100,001 to 120k add 40%. 
+                Interest is first taxed at 15%, then the balance is taxed at the additional tax per tier.
               <hr/>
             </div>
            
