--- a/Raffle.html
+++ b/Raffle.html
@@ -110,7 +110,7 @@
           <div class="dropdown">
             <button class="dropbtn texting" style="color: #ffde59; font-size: 25px;">Dapps</button>
             <div class="dropdown-content">
-              <a href="FixedAPR.html">Kiddie Rides</a>
+              <a href="FixedAPY.html">Kiddie Rides</a>
               <a href="ROI.html">Main Attraction</a>
               <a href="Gas.html">Petting Zoo</a> 
                
@@ -150,10 +150,11 @@
                       <i style="color: #12859c;" class="ri-alert-line"></i>
                       <strong style="color: #12599c;">
                         Disclaimer&nbsp;:&nbsp;
-                      </strong> Users have a chance for major gains. One winner will take the prize pot.
-                       The Winner will claim 70% of the current prize pool , 10% will be rolled over to the next. 
-                       The rest will be used to provide marketing , burns and help support the team growth.
-                       Do you feel Lucky?  
+                      </strong>  Users have a chance for major gains. 
+                      One winner will take the prize pot. 
+                      The winner will claim 70% of the current prize pool; 10% will be rolled over to the next. 
+                      The rest will be used to provide marketing, burns, and help support the team's growth. 
+                      Do you feel lucky? 
                       <hr />
                     </h6>
                   </div>
