--- a/Mint.html
+++ b/Mint.html
@@ -113,7 +113,7 @@
             <div class="dropdown">
               <button class="dropbtn texting" style="color: #ffde59; font-size: 25px;">Dapps</button>
               <div class="dropdown-content">
-                <a href="FixedAPR.html">Kiddie Rides</a>
+                <a href="FixedAPY.html">Kiddie Rides</a>
                 <a href="ROI.html">Main Attraction</a>
                 <a href="Gas.html">Petting Zoo</a>
 
@@ -154,10 +154,9 @@
                   <i style="color: #12859c;" class="ri-alert-line"></i>
                   <strong style="color: #12599c;">
                     Disclaimer&nbsp;:&nbsp;
-                  </strong>Welcome to our Mint. Users will be able to mint tokens for set prices which go up for every
-                  100,000 tokens minted.
-                  75% of the BNB collected will be used to buy and burn tokens from the Main LP,
-                  the rest will be used for furhter advancement and promoting of the PrimeApe ecosystem.
+                  </strong>Welcome to our Mint. 
+                  Users will be able to mint tokens for set prices, which go up for every 100,000 tokens minted. 
+                  75% of the BNB collected will be used to buy and burn tokens from the Main LP; the rest will be used for further advancement and promotion of the Prime Ape ecosystem. 
                   Users also have a chance to earn referral rewards by sharing their mint link and having others join.
 
                   <hr />
