--- a/Presale.html
+++ b/Presale.html
@@ -110,7 +110,7 @@
           <div class="dropdown">
             <button class="dropbtn texting" style="color: #ffde59; font-size: 25px;">Dapps</button>
             <div class="dropdown-content">
-              <a href="FixedAPR.html">Kiddie Rides</a>
+              <a href="FixedAPY.html">Kiddie Rides</a>
               <a href="ROI.html">Main Attraction</a>
               <a href="Gas.html">Petting Zoo</a> 
               
@@ -150,14 +150,15 @@
                       <i style="color: #12859c;" class="ri-alert-line"></i>
                       <strong style="color: #12599c;">
                         Disclaimer&nbsp;:&nbsp;
-                      </strong>Welcome to our presale. We are having this for those who want to be early and support the ecosystem.
-                       A token price has been predeclared and we have aloted 25,000 tokens for this. 
-                               Users are able to purchase tokens during the presale and then claim after it is over .
-                                Once presale is over then we will launch the token officially.
-                                 Users will be able to claim at any time after the presale timer is over . 
-                               A message will appear in place of the timer stating for users to claim their tokens.
-                                The funds collected will be used to provide the LP for the token.
-                                 We appreciate everyone who participates and supports.
+                      </strong> Welcome to our presale. 
+                      We are having this for those who want to be early and support the ecosystem. 
+                      A token price has been predeclared, and we have allocated 25,000 tokens for this. 
+                      Users are able to purchase tokens during the presale and then claim after it is over. 
+                      Once presale is over, then we will launch the token officially. 
+                      Users will be able to claim at any time after the presale timer is over. 
+                      A message will appear in place of the timer stating for users to claim their tokens. 
+                      The funds collected will be used to provide the LP for the token. 
+                      We appreciate everyone who participates and supports.
                       <hr />
                     </h6>
                   </div>
