--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
       <div class="row image-row text-center">
         <div class="row image-row justify-content-center text-center mt-4">
           <div class="col-md-3 col-sm-6 col-xs-12">
-              <a href="FixedAPR.html">
-                <img src="assets/img/kidride2.png" class="custom-image" alt="Fixed APR Staking" style="max-width: 100%; height: auto;"/>
+              <a href="FixedAPY.html">
+                <img src="assets/img/kidride2.png" class="custom-image" alt="Fixed APY Staking" style="max-width: 100%; height: auto;"/>
                 <h3 class="text-center text3" style="font-size: 25px;">Kiddie Rides</h3>
               </a>
           </div>
@@ -236,15 +236,15 @@
             </a>
             <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                 The Big Top Circus is the new Prime Ape project on BSC.
-                  It's an ecosystem of dapps that work together to help investors acquire more tokens and experience what PrimeApe is all about. 
-                  Here at Prime Ape we believe in the strength of holding , yet still making gains. 
-                  We understand that investors will sell and take profits, but we have worked in a way so reflection tokenomics are used in our ecosystem . 
-                  So all those who are holding will get a share of the profits. 
-                  We do collect fees in our dapps and those fees are shared with the token holders and not just kept for ourselves. 
-                  With all crypto projects it is up to the investors to do their own research and determine their risk tolerance.
-                  Although we would like to tell everyone to invest and guarantee gains but this is totally up to how the community acts. 
-                  If users are responsible and take profits responsibly , everyone can gain and properly experience what we have made for all of you.  
+                The Big Top Circus is the new Prime Ape project on BSC. 
+                It's an ecosystem of dapps that work together to help investors acquire more tokens and experience what Prime Ape is all about. 
+                Here at Prime Ape, we believe in the strength of holding, yet still making gains. 
+                We understand that investors will sell and take profits, but we have worked in a way so reflection tokenomics are used in our ecosystem. 
+                So all those who are holding will get a share of the profits. 
+                We do collect fees in our dapps, and those fees are shared with the token holders and not just kept for ourselves. 
+                With all crypto projects, it is up to the investors to do their own research and determine their risk tolerance. 
+                Although we would like to tell everyone to invest and guarantee gains, this is totally up to how the community acts. 
+                If users are responsible and take profits responsibly, everyone can gain and properly experience what we have made for all of you. 
                 
               </p>
             </div>
@@ -259,10 +259,11 @@
             </a>
             <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                The Gargantua Token is our tribute to the famous ape from the circus world of old.
-                 An ape at the time with images that compared him to King Kong. Although not that size but with his larger than life pictation, we knew we had to pay tribute to this wonderful Ape.
-                 Join us in this celebration and crypto journey as we built a dapp to celebrate not only Gargantua but all the apes in the circus that have filled generations of kids with joy. 
-                 Just like how Gargantua was larger than life we are making sure that the tokenomics can compare to his status. 
+                The Gargantua Token is our tribute to the famous ape from the circus world of old. 
+                An ape at the time with images that compared him to King Kong. 
+                Although not that size, with his larger-than-life picture, we knew we had to pay tribute to this wonderful ape. 
+                Join us in this celebration and crypto journey as we built a dapp to celebrate not only Gargantua but all the apes in the circus that have filled generations of kids with joy. 
+                Just like how Gargantua was larger than life, we are making sure that the tokenomics can compare to his status. 
                <!-- Example image inside a paragraph -->
                <img src="assets/img/tokenwp.png" alt="Invest" style="max-width: 100%; height: auto; margin-top: 10px;">
 
@@ -299,10 +300,9 @@
             </a>
             <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Many users have asked for the ability to mint tokens, so we have created a paid token Minter.
-                This token mint is special it will allow a user to purchase tokens at a set mint price,
-                 but as tokens are minted the price will increase by 3% for every 100,000 tokens minted.
-                 The funds are then used to do a buy back and burn of the supply from the Main LP.
+                Many users have asked for the ability to mint tokens, so we have created a paid token Minter. 
+                This token mint is special; it will allow a user to purchase tokens at a set mint price, but as tokens are minted, the price will increase by 3% for every 100,000 tokens minted. 
+                The funds are then used to do a buyback and burn of the supply from the Main LP.
                 
               </p>
             </div>
@@ -317,10 +317,10 @@
             </a>
             <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
               <p>
-                A new approach has been taken to the Farming that is not normally done.
-                Users will have the ability to stake assets at a set APR.
-                The reason for a Fixed Apr will be to make sure that users can count on stabe returns while staking assets in the Dapp.
-                This will reduce the need for Apr chasing and allow peace of mind for the users. 
+                A new approach has been taken to Farming that is not normally done. 
+                Users will have the ability to stake assets at a set APY. 
+                The reason for a fixed APY will be to make sure that users can count on stable returns while staking assets in the Dapp. 
+                This will reduce the need for APY chasing and allow peace of mind for the users. 
                 <!-- Example image inside a paragraph -->
                 <img src="assets/img/fixedwp.png" alt="Success" style="max-width: 100%; height: auto; margin-top: 10px;">
               </p>
@@ -336,9 +336,9 @@
             </a>
             <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Everyone enjoys a good Raffle, well here is your chance to see how lucky you are. 
-                Users have a chance to test their luck with Lucky Tickets.
-                The system has been created to be as fair as possible, while also allowing for major gains for the lucky winner of each round. 
+                Everyone enjoys a good Raffle; well, here is your chance to see how lucky you are. 
+                Users have a chance to test their luck with Lucky Tickets. 
+                The system has been created to be as fair as possible while also allowing for major gains for the lucky winner of each round. 
 
                 <!-- Example image inside a paragraph -->
                 <img src="assets/img/rafflewp.png" alt="Success" style="max-width: 100%; height: auto; margin-top: 10px;">
@@ -355,9 +355,10 @@
             </a>
             <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Miners and defi go hand and hand, well ours is named the Petting Zoo. 
-                Alot of the normal exploits that you would find in a miner, have been removed. 
+                Miners and defi go hand in hand; well, ours is named the Petting Zoo. 
+                A lot of the normal exploits that you would find in a miner have been removed. 
                 Providing a more stable and true game of patience. 
+
                 <!-- Example image inside a paragraph -->
                 <img src="assets/img/petwp.png" alt="Success" style="max-width: 100%; height: auto; margin-top: 10px;">
               </p>
@@ -373,8 +374,9 @@
             </a>
             <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Well, this is what every Ape loves a good ROI Dapp. This is a new take on the fountain contract that is being used on Pulsechain.
-                Created for sustainability, and the best way to gain more of the tokens needed for passive income. 
+                Well, this is what every Ape loves: a good ROI Dapp. 
+                This is a new take on the fountain contract that is being used on Pulsechain. 
+                Created for sustainability and the best way to gain more of the tokens needed for passive income.
                 <!-- Example image inside a paragraph -->
                 <img src="assets/img/mainwp.png" alt="Success" style="max-width: 100%; height: auto; margin-top: 10px;">
               </p>
