--- a/Mint.html
+++ b/Mint.html
@@ -99,7 +99,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link text-light"
-              href="https://bscscan.com/">
+              href="https://bscscan.com/address/0xfc39a577f0e436934b4cec6852ee3c6c5f5d16e5">
               <strong class="texting" style="color: #ffde59; font-size: 25px;">Mint Contract</strong>
             </a>
           </li>
