--- a/Presale.html
+++ b/Presale.html
@@ -96,7 +96,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="https://bscscan.com/">
+          <a class="nav-link text-light" href="https://bscscan.com/address/0x3124c67329664c053778307a3fd0683d4de92514">
             <strong class="texting" style="color: #ffde59; font-size: 25px;">Presale Contract</strong>
           </a>
         </li>
