--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <li>
 
         <li class="nav-item">
-          <a class="nav-link text-light" href="https://bscscan.com/">
+          <a class="nav-link text-light" href="https://bscscan.com/address/0xfc39a577f0e436934b4cec6852ee3c6c5f5d16e5">
             <strong class="texting" style="color: #ffde59; font-size: 25px;">Token Contract</strong>
           </a>
         </li>
