--- a/Raffle.html
+++ b/Raffle.html
@@ -96,7 +96,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="https://bscscan.com/">
+          <a class="nav-link text-light" href="https://bscscan.com/address/0x685fa89b701ed44f538c086a033adb6b37c88cf6">
             <strong class="texting" style="color: #ffde59; font-size: 25px;">Lucky Tickets Contract</strong>
           </a>
         </li>
