--- a/Mint.html
+++ b/Mint.html
@@ -144,7 +144,7 @@
             <div class="info-container" style="padding: 0px;" data-aos="zoom-in">
               <div class="info-container-2 d-flex flex-column align-items-center">
                 <div class="text-center pt-3">
-                  <img src="assets/img/mintban.png" alt="The Fountain" style="max-width: 60%; height: auto;" />
+                  <img src="assets/img/mintban.png" alt="Mint" style="max-width: 60%; height: auto;" />
                 </div>
               </div>
               <hr />
@@ -155,7 +155,7 @@
                   <strong style="color: #12599c;">
                     Disclaimer&nbsp;:&nbsp;
                   </strong>Welcome to our Mint. 
-                  Users will be able to mint tokens for set prices, which go up for every 100,000 tokens minted. 
+                  Users will be able to mint tokens for set prices, which go up for every 10,000 tokens minted. 
                   75% of the BNB collected will be used to buy and burn tokens from the Main LP; the rest will be used for further advancement and promotion of the Prime Ape ecosystem. 
                   Users also have a chance to earn referral rewards by sharing their mint link and having others join.
 
