--- a/FixedAPY.html
+++ b/FixedAPY.html
@@ -103,7 +103,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="https://bscscan.com/">
+          <a class="nav-link text-light" href="https://bscscan.com/address/0x203295eF6127dc778B17f8C301D6bD2E866da6af#code">
             <strong class="texting" style="color: #ffde59; font-size: 25px;">Staking Contract</strong>
           </a>
         </li>
