--- a/ROI.html
+++ b/ROI.html
@@ -103,7 +103,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="https://bscscan.com/">
+          <a class="nav-link text-light" href="https://bscscan.com/address/0x5174232c9355f175325d5f4baeabb21ca578a312#code">
             <strong class="texting" style="color: #ffde59; font-size: 25px;">Main Attraction Contract</strong>
           </a>
         </li>
